--- a/assignments/lesson04/muromtsev/config.json
+++ b/assignments/lesson04/muromtsev/config.json
@@ -1,6 +1,6 @@
 {
   "host": "ai-api.hurated.com",
   "port": "443",
-  "api_key": "e8cd0564e2f1eea03db8e636597e988b",
+  "api_key": "api_key",
   "history_path": "../history"
 }
