Сделал первую версию ментора по программированию

--- a/assignments/lesson04/muromtsev/CMakeLists.txt
+++ b/assignments/lesson04/muromtsev/CMakeLists.txt
@@ -18,7 +18,7 @@ find_package(OpenSSL REQUIRED)
 
 add_executable(ai_agent
     src/AiAgent.cpp
-    src/MLConsultant.cpp
+    src/Programming-Mentor.cpp
     src/main.cpp
 )
 
