--- a/assignments/lesson04/muromtsev/config.json
+++ b/assignments/lesson04/muromtsev/config.json
@@ -2,5 +2,7 @@
   "host": "ai-api.hurated.com",
   "port": "443",
   "api_key": "api_key",
-  "history_path": "../history"
+  "history_path": "../history",
+  "max_saved_requests": 10,
+  "max_saved_bytes": 4096
 }
